compiler/gw-bootstrap/crates/gw_parse/tests/snapshots/corpus__pass_corpus@004_fn_two_args.gw.snap
---
source: crates/arsenal_parse/tests/corpus.rs
expression: dump_text
---
Module @1:1..2:1
  FnDecl @1:1..2:1
    KwFn `fn` @1:1..1:3
    Ident `add` @1:4..1:7
    ParamList @1:7..1:24
      LParen `(` @1:7..1:8
      Param @1:8..1:14
        Ident `x` @1:8..1:9
        Colon `:` @1:9..1:10
        PathType @1:11..1:14
          Ident `i32` @1:11..1:14
      Comma `,` @1:14..1:15
      Param @1:16..1:22
        Ident `y` @1:16..1:17
        Colon `:` @1:17..1:18
        PathType @1:19..1:22
          Ident `i32` @1:19..1:22
      RParen `)` @1:22..1:23
    RetType @1:24..1:31
      Arrow `->` @1:24..1:26
      PathType @1:27..1:31
        Ident `i32` @1:27..1:30
    Block @1:31..2:1
      LBrace `{` @1:31..1:32
      ExprStmt @1:33..1:47
        ReturnExpr @1:33..1:45
          KwReturn `return` @1:33..1:39
          BinaryExpr @1:40..1:45
            PathExpr @1:40..1:42
              Ident `x` @1:40..1:41
            Plus `+` @1:42..1:43
            PathExpr @1:44..1:45
              Ident `y` @1:44..1:45
        Semi `;` @1:45..1:46
      RBrace `}` @1:47..1:48
