compiler/gw-bootstrap/crates/gw_parse/tests/snapshots/corpus__pass_corpus@012_int_hex.gw.snap
---
source: crates/arsenal_parse/tests/corpus.rs
expression: dump_text
---
Module @1:1..2:1
  FnDecl @1:1..2:1
    KwFn `fn` @1:1..1:3
    Ident `t` @1:4..1:5
    ParamList @1:5..1:8
      LParen `(` @1:5..1:6
      RParen `)` @1:6..1:7
    RetType @1:8..1:14
      Arrow `->` @1:8..1:10
      PathType @1:11..1:14
        Ident `u0` @1:11..1:13
    Block @1:14..2:1
      LBrace `{` @1:14..1:15
      LetStmt @1:16..1:37
        KwLet `let` @1:16..1:19
        IdentPat @1:20..1:21
          Ident `x` @1:20..1:21
        Colon `:` @1:21..1:22
        PathType @1:23..1:27
          Ident `i32` @1:23..1:26
        Eq `=` @1:27..1:28
        LiteralExpr @1:29..1:35
          IntLit `0xCAFE` @1:29..1:35
        Semi `;` @1:35..1:36
      RBrace `}` @1:37..1:38
