compiler/gw-bootstrap/crates/gw_parse/tests/snapshots/corpus__pass_corpus@019_bool.gw.snap
---
source: crates/arsenal_parse/tests/corpus.rs
expression: dump_text
---
Module @1:1..2:1
  FnDecl @1:1..2:1
    KwFn `fn` @1:1..1:3
    Ident `t` @1:4..1:5
    ParamList @1:5..1:8
      LParen `(` @1:5..1:6
      RParen `)` @1:6..1:7
    RetType @1:8..1:14
      Arrow `->` @1:8..1:10
      PathType @1:11..1:14
        Ident `u0` @1:11..1:13
    Block @1:14..2:1
      LBrace `{` @1:14..1:15
      LetStmt @1:16..1:30
        KwLet `let` @1:16..1:19
        IdentPat @1:20..1:22
          Ident `a` @1:20..1:21
        Eq `=` @1:22..1:23
        LiteralExpr @1:24..1:28
          KwTrue `true` @1:24..1:28
        Semi `;` @1:28..1:29
      LetStmt @1:30..1:45
        KwLet `let` @1:30..1:33
        IdentPat @1:34..1:36
          Ident `b` @1:34..1:35
        Eq `=` @1:36..1:37
        LiteralExpr @1:38..1:43
          KwFalse `false` @1:38..1:43
        Semi `;` @1:43..1:44
      RBrace `}` @1:45..1:46
